// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTitle Render PageTitle with all props 1`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Contact  | OIRA
    </title>
    <meta
      content="foo"
      name="description"
    />
    <meta
      content="bar"
      name="keywords"
    />
    <meta
      content="Contact"
      property="og:title"
    />
    <meta
      content="baz"
      property="og:image"
    />
    <meta
      content="foo"
      property="og:description"
    />
  </HelmetWrapper>
  <div>
    <h1>
      Contact
    </h1>
    <hr />
  </div>
</div>
`;

exports[`PageTitle Render PageTitle with noHeader and no site prop 1`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Contact 
    </title>
    <meta
      content="foo"
      name="description"
    />
    <meta
      content="bar"
      name="keywords"
    />
    <meta
      content="Contact"
      property="og:title"
    />
    <meta
      content="baz"
      property="og:image"
    />
    <meta
      content="foo"
      property="og:description"
    />
  </HelmetWrapper>
  <div>
    <h1>
      Contact
    </h1>
    <hr />
  </div>
</div>
`;
